--- a/index.html
+++ b/index.html
@@ -289,6 +289,9 @@
                 <a href="presentations/The Future of Vehicles New.pptx" target="_blank">
                     The Future of Vehicles (New)
                 </a>
+                <a href="/presentations/karate.pptx" target="_blank">
+                    Karate New Presentation
+                 </a>
             </div>
         </section>
 
